# R4nger-v2

./: .gitignore  COMPLETE_FRAMEWORK_IMPLEMENTATION.txt  Dockerfile.agent  Dockerfile.api  Dockerfile.worker  INTELLIGENCE_OS_V2.md  README.md  SYSTEM_INTEGRATION_DOCUMENT.md  USERGUIDE.md  changes.txt  docker-compose.yml  pyproject.toml  r4ng3r-V3-COMPLETE-UPGRADE-ANALYSIS.txt  r4ng3r.py  requirements.txt  start.sh  upgrade_master_plan.txt.txt
adapters_v2/: transformers.py
agents/: cloud_agent.py
ai_v2/: correlation_engine.py  decision_engine.py  identity_fusion.py  risk_scoring.py
api/: app.py
api_v2/: distributed_task_manager.py  main.py  realtime.py
automation_v2/: autonomous_pentesting_engine.py  expansion_engine.py
cli/: __init__.py  autocomplete.py  compose_logic.py  main.py  registry.py  renderers.py
config/: config.yaml  logging.conf
core/: __init__.py  base_module.py  base_tool.py  database.py  distributed.py  module_loader.py  pipeline_engine.py  security.py  tool_registry.py  workflow_engine.py
core_v2/: __init__.py  base_tool.py  pipeline_engine.py  pipeline_engine_v2.py  tool_catalog.py  tool_executor.py  tool_loader.py  tool_registry.py
discovery_v2/: __init__.py  cli.py  dependency_graph.json  introspection.py  tool_metadata_store.json
distributed_v2/: celery_app.py  tasks.py
graph_v2/: neo4j_client.py
k8s/: agent-deployment.yaml  api-deployment.yaml  hpa.yaml  namespace.yaml  neo4j.yaml  redis.yaml  ui-deployment.yaml  worker-deployment.yaml
modules/: __init__.py  github_tool_modules.py
modules_v2/: __init__.py  base_module.py  (+6 more)
(+804 files in other folders)
