[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "r4nger-v2"
version = "0.1.0"
description = "R4nger registry introspection CLI"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "pyyaml>=6.0",
  "rich>=13.7.0",
]

[project.scripts]
r4nger = "cli.main:cli"
